Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,10 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4177">
+          Update risk assessment guidance with Faye.</a></p>
+      </li>
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4160">
           Make preview page work and show all answers from the pre-sentence
           report. Previously it used the verification report info as a
