--- a/app/views/18/pre-sentence-report/risk-analysis-alt.html
+++ b/app/views/18/pre-sentence-report/risk-analysis-alt.html
@@ -53,7 +53,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="risk-analysis" method="post" novalidate>
+        <form action="risk-analysis-alt" method="post" novalidate>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
               <span class="govuk-caption-xl">
