--- a/app/views/18/pre-sentence-report/start-page.html
+++ b/app/views/18/pre-sentence-report/start-page.html
@@ -23,7 +23,7 @@
                   and any other sources of information</li>
                 <li>following a guided experience through the steps to write 
                   this report</li>
-                <li>generating the final report as PDF to share with the 
+                <li>generating the final report as a PDF to share with the 
                   judiciary</li>
               </ul>
               <div class="nhsuk-do-dont-list">
