--- a/app/views/18/pre-sentence-report/start-page.html
+++ b/app/views/18/pre-sentence-report/start-page.html
@@ -111,8 +111,8 @@
               </ul>
               <p class="govuk-body">Depending on the complexity and nature of 
                 the case, you may need to complete other relevant risk 
-                assessment tools such as a Spousal Assault Risk Assessment 
-                (SARA).
+                assessment tools such as a SARA (Spousal Assault Risk 
+                Assessment).
                 </p>
               <p class="govuk-body">If requested by court you may also need to 
                 provide additional detail through dangerousness assessments to 
