Copy changes to additional behavioural page

--- a/app/views/18/pre-sentence-report/additional-behavioural-factors-and-lifestyle-considerations.html
+++ b/app/views/18/pre-sentence-report/additional-behavioural-factors-and-lifestyle-considerations.html
@@ -61,34 +61,34 @@
                   Dylan Adam Armstrong CRN: E234516
                 </span>
                 <h1 class="govuk-heading-xl">
-                  Additional behavioural factors and lifestyle considerations
+                  Behavioural factors and lifestyle considerations
                 </h1>
                 <div id="additional-behaviours-hint" class="govuk-hint">
-                  Consider factors not already addressed in the report including any
-                  factors that require intervention, the person's capacity and
-                  motivation to address offending and identification of protective
-                  factors.
+                  <p class="govuk-body govuk-hint">Consider factors not already
+                    addressed in detail including:</p>
+                  <ul class="govuk-list govuk-list--bullet govuk-hint">
+                    <li>rehabilitative needs that require intervention</li>
+                    <li>the defendant's capacity and motivation to address
+                      offending</li>
+                    <li>identification of protective factors</li>
+                  </ul>
+                  <p class="govuk-body govuk-hint">Provide a considered analysis,
+                    do not just describe or list all factors linked to offending.</p>
                 </div>
                 <details class="govuk-details">
                   <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      Help with additional behavioural factors and lifestyle
-                      considerations
-                    </span>
+                    <span class="govuk-details__summary-text">Help with
+                      behavioural factors and lifestyle considerations</span>
                   </summary>
                   <div class="govuk-details__text">
-                    <p class="govuk-body">Do not just describe or list all factors
-                      linked to offending as this will not provide value to the
-                      judiciary. Instead focus on factors relevant to a sentencing
-                      decision, rehabilitative needs and the defendant's current
-                      capacity and motivation to address offending.</p>
-                      <p class="govuk-body">You may want to identify and assess:</p>
+                    <p class="govuk-body">Focus your analysis on factors
+                      requiring intervention that are relevant to a sentencing
+                      decision, for example:</p>
                       <ul class="govuk-list govuk-list--bullet">
-                        <li>protective factors that may mitigate further offending</li>
-                        <li>circumstances not directly linked to the offences that
-                          may impact desistance</li>
+                        <li>circumstances not directly linked to the offences
+                          that may impact desistance</li>
                         <li>barriers to engagement</li>
-                        <li>caring responsibilities for children, dependants and
+                        <li>caring responsibilities for children, dependents and
                           vulnerable adults</li>
                       </ul>
                   </div>
