Rename behavioural factors page
Additional factors and lifestyle considerations
becomes Behavioual factors and lifestyle
considerations.

Update routing, update form use, rename page.

--- a/app/views/18/pre-sentence-report/behavioural-factors-and-lifestyle-considerations.html
+++ b/app/views/18/pre-sentence-report/behavioural-factors-and-lifestyle-considerations.html
@@ -17,8 +17,8 @@
                 Offence analysis</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behavioural-factors-and-lifestyle-considerations">
-                Additional behaviours and lifestyle considerations</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="behavioural-factors-and-lifestyle-considerations">
+                Behaviours factors and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
@@ -55,7 +55,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <main id="main-content" class="app-content" role="main">
-            <form action="additional-behavioural-factors-and-lifestyle-considerations" method="post" novalidate>
+            <form action="behavioural-factors-and-lifestyle-considerations" method="post" novalidate>
               <div class="govuk-form-group">
                 <span class="govuk-caption-xl">
                   Dylan Adam Armstrong CRN: E234516
@@ -93,7 +93,7 @@
                       </ul>
                   </div>
                 </details>
-                <textarea class="govuk-textarea" id="additional-behavioural-factors-and-lifestyle-considerations" name="additional-behavioural-factors-and-lifestyle-considerations" rows="16" aria-describedby="additional-behavioural-factors-and-lifestyle-considerations-hint">{{data['additional-behavioural-factors-and-lifestyle-considerations']}}</textarea>
+                <textarea class="govuk-textarea" id="behavioural-factors-and-lifestyle-considerations" name="behavioural-factors-and-lifestyle-considerations" rows="16" aria-describedby="behavioural-factors-and-lifestyle-considerations-hint">{{data['behavioural-factors-and-lifestyle-considerations']}}</textarea>
               </div>
               <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
               <div class="govuk-button-group">
