--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -17,8 +17,8 @@
                 Offence analysis</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behavioural-factors-and-lifestyle-considerations">
-                Additional behaviours and lifestyle considerations</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="behavioural-factors-and-lifestyle-considerations">
+                Behaviours factors and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
@@ -883,7 +883,7 @@
                       <div class="govuk-grid-column-full">
                         <h2 class="govuk-heading-l report-heading--purple govuk-!-static-padding-top-5">
                           Additional behaviours and lifestyle considerations</h2>
-                        <p class="govuk-body">{{data['additional-behavioural-factors-and-lifestyle-considerations']}}</p>
+                        <p class="govuk-body">{{data['behavioural-factors-and-lifestyle-considerations']}}</p>
                       </div>
                     </div>
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
