--- a/app/views/18/pre-sentence-report/sources-of-information.html
+++ b/app/views/18/pre-sentence-report/sources-of-information.html
@@ -17,8 +17,8 @@
                 Offence analysis</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behavioural-factors-and-lifestyle-considerations">
-                Additional behaviours and lifestyle considerations</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="behavioural-factors-and-lifestyle-considerations">
+                Behaviours factors and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
