Final updated to risk assessment box

--- a/app/views/18/pre-sentence-report/risk-analysis.html
+++ b/app/views/18/pre-sentence-report/risk-analysis.html
@@ -209,9 +209,8 @@
                 <h3 class="govuk-heading-l" for="defendant-risk-of-serious-harm">
                   Risk analysis</h3>
                 <div id="defendant-risk-of-serious-harm-hint" class="govuk-hint">
-                  <p class="govuk-body"><span class="govuk-hint">Using
-                    your understanding of the individual risk factors in this
-                    case, construct a risk analysis based on:</span></p>
+                  <p class="govuk-body"><span class="govuk-hint">Using the risk
+                    factors you've identified, create a risk analysis based on:</span></p>
                   <ul class="govuk-list govuk-list--bullet govuk-hint">
                     <li>the longer-term influences (positive and negative) on
                       the defendant's behaviour, and then the more recent
@@ -219,8 +218,8 @@
                     <li>the defendant's circumstances both past and present and
                       how this may influence offending</li>
                     <li>the potential impact on victims</li>
-                    <li>a decision about which RoSH (Risk of Serious Harm) level
-                      is appropriate</li>
+                    <li>your reasoning behind which RoSH (Risk of Serious Harm)
+                      level is appropriate</li>
                   </ul>
                 </div>
                 <textarea class="govuk-textarea govuk-!-margin-top-6" id="defendant-risk-of-serious-harm" name="defendant-risk-of-serious-harm" rows="14" aria-describedby="defendant-risk-of-serious-harm-hint" >{{data['defendant-risk-of-serious-harm']}}</textarea>
