--- a/app/views/18/pre-sentence-report/offence-analysis.html
+++ b/app/views/18/pre-sentence-report/offence-analysis.html
@@ -18,7 +18,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="behavioural-factors-and-lifestyle-considerations">
-                Behaviours factors and lifestyle considerations</a>
+                Behavioural factors and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
