Updated Preview report

--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -299,24 +299,53 @@
                           </tbody>
                         </table>
                       </div>
-                    <div class="govuk-grid-row">
                     </div>
-                    </div>
-                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
                     <div class="govuk-grid-row">
                       <div class="govuk-grid-column-full">
-                        <h2 class="govuk-heading-l report-heading--purple govuk-!-static-padding-top-5">
-                          Proposed sentence</h2>
-                        <p class="govuk-body">
-                          {{ data['proposed-sentence-summary']}}</p>
-                        <p class="govuk-body">
-                          {{ data['why-better-outcome']}}</p>
-                        <p class="govuk-body">
-                          {{ data['custodial-sentencing-component']}}</p>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="moj-report-page__content">
+                        <table class="govuk-table">
+                          <tbody class="govuk-table__body">
+                            <tr class="govuk-table__row">
+                              <th scope="row" class="govuk-table__header">
+                                Offences under consideration:</th>
+                              <th scope="row" class="govuk-table__header">
+                                Date:</th>
+                            </tr>
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell">
+                                Theft of a motor vehicle <br/>
+                                <a class="govuk-link" href="defendant-details">
+                                  Change <span class="govuk-visually-hidden">
+                                    offences</span></a>
+                              </td>
+                              <td class="govuk-table__cell">
+                                12 July 2024
+                              </td>
+                            </tr>
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell">
+                                Theft from a motor vehicle <br/>
+                                <a class="govuk-link" href="defendant-details">
+                                  Change <span class="govuk-visually-hidden">
+                                    offences</span></a>
+                              </td>
+                              <td class="govuk-table__cell">
+                                12 July 2024
+                              </td>
+                            </tr>
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell">
+                                Theft <br/>
+                                <a class="govuk-link" href="defendant-details">
+                                  Change <span class="govuk-visually-hidden">
+                                    offences</span></a>
+                              </td>
+                              <td class="govuk-table__cell">
+                                12 July 2024
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>      
+                      </div>
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
                     <div class="govuk-grid-row">
                       <div class="govuk-grid-column-full">
