--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -344,8 +344,9 @@
                               </td>
                             </tr>
                           </tbody>
-                        </table>      
+                        </table>
                       </div>
+                    </div>
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
                     <div class="govuk-grid-row">
                       <div class="govuk-grid-column-full">
